# DeepMRSegApp

./: LICENSE  README.md  azure-pipelines.yml
Applications/: AppList.cmake
Applications/DeepMRSegApp/: CMakeLists.txt  CPackConfig.cmake.in  CPackOptions.cmake  CaPTkApp.ini  DeepMRSegApp.cpp  README.md  startDeepMRSegApp.bat.in  target_libraries.cmake
CMake/: DeepMRSegAppInstallRules.cmake
Modules/: ModuleList.cmake
Modules/CbicaDeepMRSeg/: CMakeLists.txt  README.md  files.cmake
Modules/CbicaDeepMRSeg/include/: DeepMRSegMediator.h
Modules/CbicaDeepMRSeg/resources/: deepmrsegwrapper.py  sitk2nibabel.py
Modules/CbicaDeepMRSeg/resources/Lists/: SkullStripping_ROI_Indices.csv
Modules/CbicaDeepMRSeg/src/: DeepMRSegMediator.cpp
Plugins/: PluginList.cmake
Plugins/upenn.cbica.deepmrseg/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.deepmrseg.application/: CMakeLists.txt  README.md  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/upenn.cbica.deepmrseg.application/resources/: QmitkDeepMRSegApplication.qrc
Plugins/upenn.cbica.deepmrseg.ui/: CMakeLists.txt  README.md  files.cmake
Plugins/upenn.cbica.deepmrseg.ui/resources/: upenn_cbica_deepmrseg_icons.qrc  upenn_cbica_deepmrseg_ui.qrc
Plugins/upenn.cbica.deepmrseg.ui/src/: QmitkExtActionBarAdvisor.cpp  QmitkExtActionBarAdvisor.h  QmitkExtFileSaveProjectAction.cpp  QmitkExtFileSaveProjectAction.h  QmitkExtWorkbenchWindowAdvisor.cpp  QmitkExtWorkbenchWindowAdvisor.h  QmitkOpenDicomEditorAction.cpp  QmitkOpenDicomEditorAction.h
(+37 files in other folders)
